--- a/templates/diffview-sortable.html
+++ b/templates/diffview-sortable.html
@@ -68,7 +68,7 @@
                 The following devices will be checked:
                 <ul class="list-group">
                     {% for host in hosts %}
-                    <li class="list-group-item"><a href="/#">{{ host }}</a></li>
+                    <li class="list-group-item"><a href="?show_device={{host}}">{{ host }}</a></li>
                     {% endfor %}
                 </ul>
             </div>
@@ -82,6 +82,7 @@
 
             </div>
         </div>
+        <strong>Note:</strong> You can filter the displayed results by clicking a host/command above
         <hr/>
     </div>
     <div class="container-fluid">
