--- a/templates/diffview-sortable.html
+++ b/templates/diffview-sortable.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends '_base_layout.html' %}
 
 {% block extra_css %}
 <link rel="stylesheet" href="/static/css/diff.css" />
@@ -9,54 +9,9 @@
 {% endblock %}
 
 {% block mainbody %}
+{% include '_modals.html' %}
 <div class="container-fluid">
-<H1>Advanced Diff Viewer</H1>
-    <div class="modal fade bs-example-modal-sm" id="myPleaseWait" tabindex="-1"
-         role="dialog" aria-hidden="true" data-backdrop="static">
-        <div class="modal-dialog modal-sm">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h4 class="modal-title">
-                        Please Wait while output is collected
-                    </h4>
-                </div>
-                <div class="modal-body">
-                    <div class="progress">
-                        <div class="progress-bar progress-bar-info
-                        progress-bar-striped active"
-                             style="width: 100%">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="modal fade bs-example-modal-sm" id="credentials" tabindex="-1" role="dialog" aria-hidden="true" data-backdrop="static">
-        <div class="modal-dialog modal-md">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h4 class="modal-title">
-                        Please Enter your device credentials
-                    </h4>
-
-                </div>
-                <div class="modal-body">
-                    <div class="wrapper">
-                        <form action="/cr/{{change.cr}}/snap" class="form-signin" method="post">
-                            <h5 class="form-signin-heading">we will never store your credentials</h5>
-                            <input type="text" class="form-control" name="username" placeholder="username" required="" autofocus="" />
-                            <input type="password" class="form-control" name="password" placeholder="password" required=""/>
-                            <button class="btn btn-lg btn-primary btn-block" onclick="submitCreds()">Login</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-
+<H1>Advanced Delta Viewer</H1>
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12">
