--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends '_base_layout.html' %}
 
 {% block extra_css %}
 <link rel="stylesheet" href="/static/css/diff.css" />
